--- a/src/pages/Home/Greet/styles.css
+++ b/src/pages/Home/Greet/styles.css
@@ -1,22 +1,22 @@
 .greet-container {
-    background-image: url("../../../assets/ft-bg-1.png");
+  background: url('../../../assets/ft-bg-1.png') no-repeat center / cover;
 }
 
 .greet-content {
-    top: 40%;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    width: fit-content;
+  top: 40%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: fit-content;
 }
 
 .greet-content > p {
-    margin: 0;
-    font-size: 3rem;
-    color: var(--color-primary);
-    font-weight: 700;
+  margin: 0;
+  font-size: 3rem;
+  color: var(--color-primary);
+  font-weight: 700;
 }
 
 .greet-btn {
-    margin-top: 1rem;
+  margin-top: 1rem;
 }
