--- a/src/pages/Admin/Blogs/Blog/styles.css
+++ b/src/pages/Admin/Blogs/Blog/styles.css
@@ -4,6 +4,7 @@
     padding: 0.75rem 1rem;
     border-radius: 0.25rem;
     justify-content: space-between;
+    align-items: center;
 }
 
 .blog__management-left {
