--- a/src/components/navbar/styles.css
+++ b/src/components/navbar/styles.css
@@ -2,11 +2,11 @@
     position: fixed;
     flex-direction: row;
     width: 100%;
-    /* max-height: 15%; */
     z-index: 100;
     align-items: center;
     display: flex;
     background-color: var(--color-primary-variant);
+    top: 0;
 }
 
 .navbar-home {
@@ -51,4 +51,109 @@
     color: var(--color-white);
     padding: 1.2rem;
     cursor: pointer;
+}
+
+.navbar-cart-box {
+    position: relative;
+}
+
+.navbar-cart-number {
+    position: absolute;
+    top: 7px;
+    right: 7px;
+    background-color: white;
+    border-radius: 50%;
+    color: black;
+    font-size: 0.8rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 1.2rem;
+    height: 1.2rem;
+}
+
+.navbar-order {
+    color: var(--color-white);
+    padding: 1.2rem;
+    cursor: pointer;
+}
+
+.dropdown-content {
+    padding: 0.5rem 0.5rem;
+}
+
+.dropdown-content-wrapper {
+    max-height: 245px;
+    overflow-y: scroll;
+    min-width: 200px;
+}
+
+.dropdown-item {
+    display: flex;
+    justify-content: space-between;
+    padding: 0.5rem 0.5rem;
+    cursor: auto;
+}
+
+.dropdown-item .dropdown-item-left {
+    width: 100px;
+    height: 100px;
+}
+
+.dropdown-item-right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-left: 1rem;
+    width: 150px;
+}
+
+.dropdown-item-right .dropdown-item-name {
+    font-size: 1.2rem;
+    margin: 0;
+    font-weight: 500;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.dropdown-content p:hover {
+    background-color: unset;
+    color: unset;
+}
+
+.btn-cancel-order {
+    margin-top: 5px;
+    display: block;
+    border: 1px solid black;
+    color: black;
+    border-radius: 0.5rem;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    background-color: transparent;
+    margin-right: auto;
+}
+
+.btn-cancel-order:hover {
+    background-color: var(--color-primary);
+    color: white;
+    transition: all 0.3s ease;
+}
+
+.btn-view-order {
+    margin-top: 5px;
+    display: block;
+    border: 1px solid black;
+    color: black;
+    border-radius: 0.5rem;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+    background-color: transparent;
+    margin-left: auto;
+}
+
+.btn-view-order:hover {
+    background-color: var(--color-primary);
+    color: white;
+    transition: all 0.3s ease;
 }
