--- a/src/components/productSlider/styles.css
+++ b/src/components/productSlider/styles.css
@@ -12,6 +12,21 @@
   color: white !important;
 }
 
+.menu-wrapper .menu-title {
+  margin-bottom: 1rem;
+  margin-left: 2.7rem;
+}
+
+.slideshow-navigator.prev {
+  margin: auto;
+  margin-right: 0.7rem;
+}
+
+.slideshow-navigator.next {
+  margin: auto; 
+  margin-left: 0.7rem;
+}
+
 .product__info-content {
   display: flex;
   flex-direction: column;
@@ -40,18 +55,33 @@
 
 .product__info-image {
   border-radius: 8px;
+  width: 41rem;
+  height: 41rem;
+  object-fit: contain;
 }
 
 .product__info-name {
-  font-size: 3rem;
+  font-size: 2.5rem;
 }
 
 .product__info-description {
-  font-size: 1.2rem;
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 1xrem;
+  display:-webkit-box;
+  -webkit-line-clamp:13;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-break: break-word;
+  margin-bottom: 0.7rem;
 }
 
 .product__info-price {
   font-size: 1.2rem;
+}
+
+.product__info-number {
+  font-size: 1.5rem;
 }
 
 .product__info-ingredients {
@@ -62,13 +92,19 @@
   font-size: 1.2rem;
 }
 
-.btn-order {
+.btn-order-cart {
   border: 1px solid white;
   color: white;
   border-radius: 0.5rem;
   padding: 0.5rem 1rem;
   font-size: 1.2rem;
   background-color: transparent;
+}
+
+.btn-order-cart:hover {
+  background-color: white;
+  color: var(--color-primary);
+  transition: all 0.3s ease;
 }
 
 .product__quantity {
@@ -83,11 +119,13 @@
   cursor: pointer;
   padding: 0.35rem 0.75rem;
   margin: 0 1rem;
+  user-select: none;
 }
 
 .product__order-container {
   display: flex;
   justify-content: space-between;
+  margin-top: auto;
 }
 
 .product__quantity-title {
