--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,6 @@ html {
 
 .container {
   height: 100vh;
-  min-height: 100vh;
   transition: var(--transition);
 }
 
@@ -80,10 +79,12 @@ html {
   display: none;
   position: absolute;
   right: 0%;
+  top: calc(100% - 10px);
   min-width: 8rem;
   background-color: #f9f9f9;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  border-radius: 4px;
 }
 
 .dropdown-content p {
