--- a/src/pages/Home/Menu/styles.css
+++ b/src/pages/Home/Menu/styles.css
@@ -1,6 +1,8 @@
 .menu-container {
     display: flex;
     flex-direction: column;
+    height: auto;
+    margin-bottom: 5rem;
 }
 
 .menu-product-image {
@@ -47,48 +49,6 @@
 
 .menu-product-price {
     font-size: 20px;
-}
-
-.menu-modal-container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    width: 25%;
-    height: fit-content;
-    border: 1px solid black;
-    border-radius: 0.2rem;
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    gap: 0.5rem;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-}
-
-.menu-modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: white;
-}
-
-.modal-qr {
-    max-height: 15rem;
-    max-width: 15rem;
-}
-
-.modal-title {
-    font-weight: 700;
-    font-size: 1.5rem;
-}
-
-.modal-subtitle {
-    font-size: 1.2rem;
 }
 
 @media only screen and (max-width: 600px) {
