--- a/src/pages/Home/Menu/styles.css
+++ b/src/pages/Home/Menu/styles.css
@@ -1,98 +1,106 @@
 .menu-container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  padding: 3rem;
+}
+
+@media (min-width: 1000px) {
+  .menu-container {
+    max-width: 80%;
+    margin: auto;
+  }
 }
 
 .menu-product-image {
-    width: 360px;
-    height: 360px;
+  width: 360px;
+  height: 360px;
 }
 
 .menu-products {
-    display: flex;
-    flex-direction: row;
-    gap: 10rem;
-    margin-top: 3rem;
+  display: flex;
+  flex-direction: row;
+  gap: 10rem;
+  margin-top: 3rem;
 }
 
 .menu-product {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
 }
 
 .menu-product-name {
-    font-size: 32px;
-    font-weight: 700;
-    color: var(--color-primary);
+  font-size: 32px;
+  font-weight: 700;
+  color: var(--color-primary);
 }
 
 .menu-subtitle {
-    font-size: 24px;
+  font-size: 24px;
 }
 
 .menu-product-description {
-    font-size: 18px;
+  font-size: 18px;
 }
 
 .menu-title {
-    margin: 0 0 0rem 2rem;
-    font-size: 2.5rem;
+  margin: 0 0 0rem 2rem;
+  font-size: 2.5rem;
 }
 
 .rating-star {
-    padding: 8px 0 0 0 !important;
+  padding: 8px 0 0 0 !important;
 }
 
 .menu-product-price {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 .menu-modal-container {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: white;
-    width: 25%;
-    height: fit-content;
-    border: 1px solid black;
-    border-radius: 0.2rem;
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
-    gap: 0.5rem;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  width: 25%;
+  height: fit-content;
+  border: 1px solid black;
+  border-radius: 0.2rem;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+  gap: 0.5rem;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .menu-modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: white;
 }
 
 .modal-qr {
-    max-height: 15rem;
-    max-width: 15rem;
+  max-height: 15rem;
+  max-width: 15rem;
 }
 
 .modal-title {
-    font-weight: 700;
-    font-size: 1.5rem;
+  font-weight: 700;
+  font-size: 1.5rem;
 }
 
 .modal-subtitle {
-    font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 
 @media only screen and (max-width: 600px) {
-    .menu-products {
-        flex-direction: column;
-    }
+  .menu-products {
+    flex-direction: column;
+  }
 }
