--- a/src/components/productSlider/styles.css
+++ b/src/components/productSlider/styles.css
@@ -7,8 +7,7 @@
   flex-direction: column;
   background-color: var(--color-primary);
   border-radius: 8px;
-  padding: 2rem 2rem 2.5rem 2rem;
-  margin-top: 9rem;
+  padding: 2rem 2.5rem 2.5rem;
   color: white !important;
 }
 
@@ -23,15 +22,15 @@
 }
 
 .slideshow-navigator.next {
-  margin: auto; 
+  margin: auto;
   margin-left: 0.7rem;
 }
 
 .product__info-content {
   display: flex;
   flex-direction: column;
+  flex: 1;
   gap: 0.2rem;
-  min-height: 460px;
 }
 
 .product__info-container {
@@ -41,22 +40,28 @@
 }
 
 .product__info-left {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+}
+
+.product__info-right {
+  flex: 1;
 }
 
 .product__info-right {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
-  flex: 1;
+  justify-content: space-between;
+}
+
+.product__image-wrapper {
+  width: 100%;
+  max-width: 400px;
+  margin: auto;
+  border-radius: 8px;
 }
 
 .product__info-image {
-  border-radius: 8px;
-  width: 41rem;
-  height: 41rem;
+  width: 100%;
+  height: auto;
   object-fit: contain;
 }
 
@@ -65,31 +70,23 @@
 }
 
 .product__info-description {
+  font-size: 1.2rem;
+  flex: 1;
   color: rgba(255, 255, 255, 0.7);
-  font-size: 1xrem;
-  display:-webkit-box;
-  -webkit-line-clamp:13;
-  -webkit-box-orient: vertical;
+  max-height: 200px;
   overflow: hidden;
   text-overflow: ellipsis;
-  word-break: break-word;
-  margin-bottom: 0.7rem;
-}
-
-.product__info-price {
-  font-size: 1.2rem;
 }
 
 .product__info-number {
   font-size: 1.5rem;
 }
 
+.product__info-quantity,
+.product__info-price,
 .product__info-ingredients {
   font-size: 1.2rem;
-}
-
-.product__info-quantity {
-  font-size: 1.2rem;
+  font-weight: bold;
 }
 
 .btn-order-cart {
@@ -135,4 +132,10 @@
 .product__order {
   display: flex;
   align-items: center;
+}
+
+@media (max-width: 700px) {
+  .product__info-container {
+    flex-direction: column;
+  }
 }
