--- a/src/pages/Home/Menu/styles.css
+++ b/src/pages/Home/Menu/styles.css
@@ -1,58 +1,64 @@
 .menu-container {
-    display: flex;
-    flex-direction: column;
-    height: auto;
-    margin-bottom: 5rem;
+  display: flex;
+  flex-direction: column;
+  padding: 3rem;
+}
+
+@media (min-width: 1000px) {
+  .menu-container {
+    max-width: 80%;
+    margin: auto;
+  }
 }
 
 .menu-product-image {
-    width: 360px;
-    height: 360px;
+  width: 360px;
+  height: 360px;
 }
 
 .menu-products {
-    display: flex;
-    flex-direction: row;
-    gap: 10rem;
-    margin-top: 3rem;
+  display: flex;
+  flex-direction: row;
+  gap: 10rem;
+  margin-top: 3rem;
 }
 
 .menu-product {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  cursor: pointer;
 }
 
 .menu-product-name {
-    font-size: 32px;
-    font-weight: 700;
-    color: var(--color-primary);
+  font-size: 32px;
+  font-weight: 700;
+  color: var(--color-primary);
 }
 
 .menu-subtitle {
-    font-size: 24px;
+  font-size: 24px;
 }
 
 .menu-product-description {
-    font-size: 18px;
+  font-size: 18px;
 }
 
 .menu-title {
-    margin: 0 0 0rem 2rem;
-    font-size: 2.5rem;
+  margin: 0 0 0rem 2rem;
+  font-size: 2.5rem;
 }
 
 .rating-star {
-    padding: 8px 0 0 0 !important;
+  padding: 8px 0 0 0 !important;
 }
 
 .menu-product-price {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 @media only screen and (max-width: 600px) {
-    .menu-products {
-        flex-direction: column;
-    }
+  .menu-products {
+    flex-direction: column;
+  }
 }
