--- a/src/components/imageSlider/styles.css
+++ b/src/components/imageSlider/styles.css
@@ -13,17 +13,18 @@
 
 .slideshow-navigator {
   cursor: pointer;
+  font-size: 36px;
   color: white;
-  font-size: 3.2rem;
+  height: 100%;
+  display: flex;
+  align-items: center;
   padding: 0.5rem;
-  position: absolute;
-  top: 50%;
 }
 
 .next {
-  right: 0;
+  margin-left: auto;
 }
 
 .prev {
-  left: 0;
+  margin-right: auto;
 }
