--- a/src/components/productSlider/styles.css
+++ b/src/components/productSlider/styles.css
@@ -7,7 +7,8 @@
   flex-direction: column;
   background-color: var(--color-primary);
   border-radius: 8px;
-  padding: 2rem 2.5rem 2.5rem;
+  padding: 2rem 2rem 2.5rem 2rem;
+  margin-top: 9rem;
   color: white !important;
 }
 
@@ -22,15 +23,15 @@
 }
 
 .slideshow-navigator.next {
-  margin: auto;
+  margin: auto; 
   margin-left: 0.7rem;
 }
 
 .product__info-content {
   display: flex;
   flex-direction: column;
-  flex: 1;
   gap: 0.2rem;
+  min-height: 460px;
 }
 
 .product__info-container {
@@ -40,28 +41,22 @@
 }
 
 .product__info-left {
-}
-
-.product__info-right {
-  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .product__info-right {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-}
-
-.product__image-wrapper {
-  width: 100%;
-  max-width: 400px;
-  margin: auto;
-  border-radius: 8px;
+  gap: 0.5rem;
+  flex: 1;
 }
 
 .product__info-image {
-  width: 100%;
-  height: auto;
+  border-radius: 8px;
+  width: 41rem;
+  height: 41rem;
   object-fit: contain;
 }
 
@@ -70,23 +65,32 @@
 }
 
 .product__info-description {
-  font-size: 1.2rem;
-  flex: 1;
+  margin-top: 5px;
   color: rgba(255, 255, 255, 0.7);
-  max-height: 200px;
+  font-size: 1xrem;
+  display:-webkit-box;
+  -webkit-line-clamp:13;
+  -webkit-box-orient: vertical;
   overflow: hidden;
   text-overflow: ellipsis;
+  word-break: break-word;
+  margin-bottom: 0.7rem;
+}
+
+.product__info-price {
+  font-size: 1.2rem;
 }
 
 .product__info-number {
   font-size: 1.5rem;
 }
 
-.product__info-quantity,
-.product__info-price,
 .product__info-ingredients {
   font-size: 1.2rem;
-  font-weight: bold;
+}
+
+.product__info-quantity {
+  font-size: 1.2rem;
 }
 
 .btn-order-cart {
@@ -132,10 +136,4 @@
 .product__order {
   display: flex;
   align-items: center;
-}
-
-@media (max-width: 700px) {
-  .product__info-container {
-    flex-direction: column;
-  }
 }
