--- a/src/pages/Cart/styles.css
+++ b/src/pages/Cart/styles.css
@@ -110,3 +110,19 @@
   font-size: 1.2rem;
   text-align: center;
 }
+
+.cart__order-position {
+  display: flex;
+  justify-content: center;
+  margin-top: 1rem;
+}
+
+.cart__order-button {
+  padding: 0.75rem 1.25rem;
+  border-radius: 0.5rem;
+  background-color: var(--color-primary);
+  color: #fff;
+  font-size: 1.2rem;
+  border: none;
+  cursor: pointer;
+}
