--- a/src/pages/Cart/styles.css
+++ b/src/pages/Cart/styles.css
@@ -68,6 +68,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  justify-content: flex-end;
 }
 
 .cart__history-info__total {
@@ -104,11 +105,13 @@
   width: 200px;
   height: 200px;
   margin-bottom: 1rem;
+  visibility: hidden;
 }
 
 .cart__payment-subtitle {
   font-size: 1.2rem;
   text-align: center;
+  visibility: hidden;
 }
 
 .cart__order-position {
