--- a/src/pages/Home/BlogDetail/styles.css
+++ b/src/pages/Home/BlogDetail/styles.css
@@ -63,8 +63,14 @@
 }
 
 .blog__detail__name-content {
-    font-size: 1.75rem;
+    font-size: 2.75rem;
     font-weight: 700;
+}
+
+.blog__detail__content {
+    font-size: 1.75rem;
+    font-weight: 400;
+    padding: 0.5rem 0;
 }
 
 .blog-images-container {
@@ -83,6 +89,8 @@
     flex-direction: column;
     gap: 0.5rem;
     padding: 0.5rem 0;
+    overflow-y: scroll;
+    height: 65vh;
 }
 
 .blog__detail__comment-button {
