--- a/src/pages/Auth/styles.css
+++ b/src/pages/Auth/styles.css
@@ -23,13 +23,11 @@
 .login-form-container * {
   border-radius: 1rem;
   font-size: 1.2rem;
-  margin: 0;
 }
 
 .signup-form-container * {
   border-radius: 1rem;
   font-size: 1.2rem;
-  margin: 0;
 }
 
 .login-form {
@@ -44,12 +42,14 @@
   margin-top: 1rem;
 }
 
-.login-form * {
+.login-form>button,
+input {
   padding: 0.5rem;
   margin: 0.25rem;
 }
 
-.signup-form * {
+.login-form button,
+input {
   padding: 0.5rem;
   margin: 0.25rem;
 }
