--- a/src/pages/Admin/Products/Product/styles.css
+++ b/src/pages/Admin/Products/Product/styles.css
@@ -4,6 +4,7 @@
     border-radius: 0.25rem;
     padding: 0.75rem 1rem;
     justify-content: space-between;
+    align-items: center;
 }
 
 .product__management-left {
